Fix tab headers and use corner-shape: bevel

--- a/scss/mixins/_cutout_border.scss
+++ b/scss/mixins/_cutout_border.scss
@@ -1,35 +1,41 @@
 @mixin outline {
-    &::before {
-        content: "";
-        position: absolute;
-        background: var(--cutout-border-background);
-        inset: var(--cutout-outline-inset);
-        pointer-events: none;
-        clip-path: polygon(
-            0 var(--cutout-corner-angle),
-            var(--cutout-corner-angle) 0,
-            calc(100% - var(--cutout-corner-angle)) 0,
-            100% var(--cutout-corner-angle),
-            100% calc(100% - var(--cutout-corner-angle)),
-            calc(100% - var(--cutout-corner-angle)) 100%,
-            var(--cutout-corner-angle) 100%,
-            0 calc(100% - var(--cutout-corner-angle)),
-            0 var(--cutout-corner-angle),
-            var(--cutout-outline-thickness) calc(var(--cutout-corner-angle) + var(--cutout-outline-thickness) * 0.5),
-            var(--cutout-outline-thickness)
-                calc(100% - var(--cutout-corner-angle) - var(--cutout-outline-thickness) * 0.5),
-            calc(var(--cutout-corner-angle) + var(--cutout-outline-thickness) * 0.5)
-                calc(100% - var(--cutout-outline-thickness)),
-            calc(100% - var(--cutout-corner-angle) - var(--cutout-outline-thickness) * 0.5)
-                calc(100% - var(--cutout-outline-thickness)),
-            calc(100% - var(--cutout-outline-thickness))
-                calc(100% - var(--cutout-corner-angle) - var(--cutout-outline-thickness) * 0.5),
-            calc(100% - var(--cutout-outline-thickness))
-                calc(var(--cutout-corner-angle) + var(--cutout-outline-thickness) * 0.5),
-            calc(100% - var(--cutout-corner-angle) - var(--cutout-outline-thickness) * 0.5)
-                var(--cutout-outline-thickness),
-            calc(var(--cutout-corner-angle) + var(--cutout-outline-thickness) * 0.5) var(--cutout-outline-thickness),
-            var(--cutout-outline-thickness) calc(var(--cutout-corner-angle) + var(--cutout-outline-thickness) * 0.5)
-        );
+    @supports (corner-shape: bevel) {
+        outline: 1px solid var(--cutout-border-background);
+        outline-offset: calc(-1 * var(--cutout-outline-inset));
+    }
+    @supports not (corner-shape: bevel) {
+        &::before {
+            content: "";
+            position: absolute;
+            background: var(--cutout-border-background);
+            inset: var(--cutout-outline-inset);
+            pointer-events: none;
+            clip-path: polygon(
+                0 var(--cutout-corner-angle),
+                var(--cutout-corner-angle) 0,
+                calc(100% - var(--cutout-corner-angle)) 0,
+                100% var(--cutout-corner-angle),
+                100% calc(100% - var(--cutout-corner-angle)),
+                calc(100% - var(--cutout-corner-angle)) 100%,
+                var(--cutout-corner-angle) 100%,
+                0 calc(100% - var(--cutout-corner-angle)),
+                0 var(--cutout-corner-angle),
+                var(--cutout-outline-thickness) calc(var(--cutout-corner-angle) + var(--cutout-outline-thickness) * 0.5),
+                var(--cutout-outline-thickness)
+                    calc(100% - var(--cutout-corner-angle) - var(--cutout-outline-thickness) * 0.5),
+                calc(var(--cutout-corner-angle) + var(--cutout-outline-thickness) * 0.5)
+                    calc(100% - var(--cutout-outline-thickness)),
+                calc(100% - var(--cutout-corner-angle) - var(--cutout-outline-thickness) * 0.5)
+                    calc(100% - var(--cutout-outline-thickness)),
+                calc(100% - var(--cutout-outline-thickness))
+                    calc(100% - var(--cutout-corner-angle) - var(--cutout-outline-thickness) * 0.5),
+                calc(100% - var(--cutout-outline-thickness))
+                    calc(var(--cutout-corner-angle) + var(--cutout-outline-thickness) * 0.5),
+                calc(100% - var(--cutout-corner-angle) - var(--cutout-outline-thickness) * 0.5)
+                    var(--cutout-outline-thickness),
+                calc(var(--cutout-corner-angle) + var(--cutout-outline-thickness) * 0.5) var(--cutout-outline-thickness),
+                var(--cutout-outline-thickness) calc(var(--cutout-corner-angle) + var(--cutout-outline-thickness) * 0.5)
+            );
+        }
     }
 }
