--- a/scss/window/_tab-headers-inverted.scss
+++ b/scss/window/_tab-headers-inverted.scss
@@ -21,15 +21,31 @@
 @scope (.fas-tab-header-inverted .mod-root .workspace-tabs:not(.mod-stacked)) {
     .is-active .workspace-tab-header-inner {
         background-color: var(--workleaves-background);
-        clip-path: polygon(0 8px, 8px 0, calc(100% - 8px) 0, 100% 8px, 100% 100%, 0 100%);
     }
+    @supports (corner-shape: bevel) {
+        .workspace-tab-header .workspace-tab-header-inner {
+            corner-shape: bevel bevel square square;
+            border-radius: 8px;
+        }
+        .workspace-tab-header:first-child .workspace-tab-header-inner {
+            corner-top-left-shape: square;
+        }
+        .workspace-tab-header:last-child .workspace-tab-header-inner {
+            corner-top-right-shape: square;
+        }
+    }
+    @supports not (corner-shape: bevel) {
+        .workspace-tab-header .workspace-tab-header-inner {
+            clip-path: polygon(0 8px, 8px 0, calc(100% - 8px) 0, 100% 8px, 100% 100%, 0 100%);
+        }
 
-    // Remove cutout corner for first and last tabs
-    .is-active:first-child .workspace-tab-header-inner {
-        clip-path: polygon(0 0, calc(100% - 8px) 0, 100% 8px, 100% 100%, 0 100%);
-    }
-    .is-active:last-child .workspace-tab-header-inner {
-        clip-path: polygon(0 8px, 8px 0, 100% 0, 100% 100%, 0 100%);
+        // Remove cutout corner for first and last tabs
+        .workspace-tab-header:first-child .workspace-tab-header-inner {
+            clip-path: polygon(0 0, calc(100% - 8px) 0, 100% 8px, 100% 100%, 0 100%);
+        }
+        .workspace-tab-header:last-child .workspace-tab-header-inner {
+            clip-path: polygon(0 8px, 8px 0, 100% 0, 100% 100%, 0 100%);
+        }
     }
 
     // Using `:has()` to remove the divider before the active tab is too heavy when the windows need to be repainted
