--- a/scss/editor/tables/_plain-table.scss
+++ b/scss/editor/tables/_plain-table.scss
@@ -7,7 +7,7 @@
         --table-background: color-mix(in hwb, var(--background-primary), rgb(var(--mono-rgb-100)) 3%);
         --table-border-color: transparent;
         --table-header-border-color: var(--table-border-color);
-        --table-column-alt-background: none;
+        --table-column-alt-background: transparent;
         --table-header-background: color-mix(in hwb, var(--background-primary), rgb(var(--mono-rgb-0)) 30%);
         --table-header-border-width: 1px;
         --table-row-alt-background: var(--background-primary-alt);
